added unit tests

--- a/package.json
+++ b/package.json
@@ -27,6 +27,18 @@
     "url": "https://github.com/ngs/hubot-irkit/issues"
   },
   "devDependencies": {
-    "hubot": ">=2.4.1"
+    "hubot": ">=2.7.5",
+    "gulp": "^3.7.0",
+    "coffee-script": "~1.7.1",
+    "gulp-coffee": "^2.0.1",
+    "gulp-util": "^2.2.16",
+    "hubot-mock-adapter": "^1.0.0",
+    "gulp-mocha": "^0.4.1",
+    "nock": "^0.34.1",
+    "chai": "^1.9.1",
+    "chai-spies": "^0.5.1",
+    "gulp-clean": "^0.3.0",
+    "gulp-coffeelint": "^0.3.3",
+    "gulp-watch": "^0.6.5"
   }
 }
