--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
 language: node_js
 env:
-  - MOCHA_REPORTER=spec
+- MOCHA_REPORTER=spec
 node_js:
-  - "0.11"
-  - "0.10"
+- '0.11'
+- '0.10'
 notifications:
   on_success: always
   on_failure: always
   on_start: always
   webhooks:
-    - 'http://ngs-hubot.herokuapp.com/travisci/hooks'
-
+  - http://ngs-hubot.herokuapp.com/travisci/hooks
+deploy:
+  provider: npm
+  email: a@ngs.io
+  api_key:
+    secure: gSaiFtITG1dgRDFSjS72pT6tD/twalhGDDQB4jv9/OiFZDSagspTRsykrZiqC8l9LEwdXptjWw1c2NKEGax31xh5dGNdP4jTD32HsUW0OzJBKaNgD5LP+7u2+yqM1t+9Sdpvn4MPW+ouXM75+xdeUCuzsKBKCq4ihxrA4zTXT54=
+  on:
+    tags: true
+    repo: ngs/hubot-irkit
